résolution des bugs apparents, version beta avant les tests sur la vrai piste

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Drive_it</name>
+	<name>Drive_it_3</name>
 	<comment></comment>
 	<projects>
 	</projects>
